# Copilar-App-Compartir

./: flutter_bootstrap.js  main.py  manifest.json  pyproject.toml
docs/: index.html
